# gps_analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONSOLIDATION_MAP.md  DESIGN_live_detrending.md  DESIGN_outlier_detection.md  MATH_STANDARDS.md
reference/gbis4ts/: SOURCE_MAP.md
reference/gbis4ts/Verification/: TS14.txt  startPara  tsList
src/gps_analysis/: __init__.py  _mcmc.py  baseline.py  deformation.py  detrend.py  fitting.py  joint.py  models.py  noise.py  outliers.py  preprocess.py  transient.py  velocity.py
tests/: test_baseline.py  test_deformation.py  test_deformation_slip.py  test_detrend.py  test_fitting.py  test_joint.py  test_leaf_guard.py  test_mcmc.py  test_models.py  test_outliers.py  test_outliers_stage0.py  test_package.py  test_preprocess.py  test_transient.py  test_velocity.py  verification_outlier_ab.py
