[project]
name = "gps_analysis"
version = "0.1.0"
description = "General GNSS time-series analysis for the IMO network: trajectory models, robust detrending, velocity estimation, deformation-source inversion"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
keywords = [
    "gps", "gnss", "geodesy", "deformation", "time-series",
    "velocity", "detrend", "mogi", "okada", "volcano",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
requires-python = ">=3.13"
# LEAF PACKAGE RULE (plan risk R6): numpy / scipy / gtimes only.
# gps_analysis must never depend on geo_dataread, gps_parser, tostools,
# receivers, gps_plot or gps_api — the Tier-1 graph would gain a cycle.
# Enforced in CI by tests/test_leaf_guard.py.
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14.1",
    "gtimes>=0.5.1",
]

[project.urls]
Homepage = "https://github.com/bgo-gnss/gps_analysis"
Repository = "https://github.com/bgo-gnss/gps_analysis.git"
Issues = "https://github.com/bgo-gnss/gps_analysis/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gps_analysis"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line length handled by black
    "N803", # GPS-domain camelCase argument names (house convention)
    "N806", # GPS-domain camelCase locals (house convention)
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["scipy.*", "gtimes.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
filterwarnings = ["error"]
markers = [
    "slow: reduced-length MCMC runs (~10-60 s each); deselect with -m 'not slow'",
]

[tool.coverage.run]
source = ["src"]
branch = true
